--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <ul>
   <li *ngFor="let product of products">
-    <a routerLink="/product/{{product.id}}" routerLinkActive><p class="album-name"> {{product.albumName}} </p></a>
+    <a routerLink="/product/{{product.id}}" routerLinkActive="active"><p class="album-name"> {{product.albumName}} </p></a>
   </li>
 </ul>
